fixed alignment / top-margin of elements within two-column-markdown.html

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -4712,5 +4712,9 @@ h2.section-header {
   }
 }
 
+.markdownify-column > p {
+  @include u-margin-top(0);
+}
+
 @import 'problem-statement.scss';
 @import 'animated-graphs.scss';
